# osp-code-repository-gruppe-4-1

./: .gitignore  README.md  app.py  auth.py  constants.py  critical.py  db.py  export.py  floor_plan.py  input.py  log.py  prune_archive.py  pyproject.toml  requirements.txt  triggers.py  utils.py
.github/workflows/: docker.yml  python-app.yml  semgrep.yml
database/: marketplace.sqlite  models.py
docker/: Dockerfile  entrypoint.sh
static/css/: baseStyle.css  dashboard.css  marketplace.css
static/js/: admin_notes.js  baseScript.js  dashboard_export.js  event_registration_form.js  user_issues.js
templates/: admin_dashboard.html  baseHomeContent.html  baseLayout.html  baseTemplate.html  error.html  event_registration_form.html  floor_plan.html  login_form.html  marketplace.html  marketplaceLandingpage.html  registration_form.html  slim.html  user_dashboard.html
templates/html/: baseTemplate.html
tests/: flask-init.py  flask_init.py  test_admin.py  test_core.py  test_floor_plan.py  test_init.py  test_input.py  test_issues.py  test_prune.py  test_registration.py  test_triggers.py
