[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gso-marketplace-grp-4"
version = "0.1.0-dev"

[tool.pytest]
addopts = ["--import-mode=importlib", "--cov=.", "--cov-fail-under=90", "--cov-report=term-missing"]
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*","database/*"]

[tool.pylint.main]
fail-under = 8.6
ignore-paths = ["tests|tests", "database|database"]
recursive = true
source-roots = ["."]

